# AskSEC

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.sh
app/: streamlit_app.py
docs/: CONFIGURATION.md
scripts/: build_vectorstore.py  download_filings.py  process_filings.py  test_rag.py
src/: __init__.py
src/data/: downloader.py  parser.py  preprocessor.py
src/embeddings/: __init__.py  vector_store.py
src/rag/: chain.py  prompts.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_config.py  test_downloader.py  test_integration.py  test_parser.py  test_preprocessor.py  test_rag_chain.py  test_vector_store.py
